--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -133,7 +133,7 @@ Thus, the "population" variance of the distribution of sample means ($\sigma_{\b
 
 ### Approach 2: CLT: *Calculation* of variance due to sampling error
 
-Fortunately, **when sampling error is the ONLY source of variability in sample mean** there is a shortcut. We don't need to obtain an infinite number of sample means to determine the variance of the distribution of an infinite number of sample means, Figure \@ref(fig:chdeepfigure1)B. There is a "shortcut formula" we can use based on the Central Limit Theorem (CLT), see the formula below.
+Fortunately, **when sampling error is the ONLY source of variability in sample means** there is a shortcut. We don't need to obtain an infinite number of sample means to determine the variance of the distribution of an infinite number of sample means, Figure \@ref(fig:chdeepfigure1)B. There is a "shortcut formula" we can use based on the Central Limit Theorem (CLT), see the formula below.
 
 $$
 \sigma_{\bar{x}}^2 = \frac{\sigma_{people}^2}{\text{sample size}}
@@ -168,7 +168,7 @@ Thus, the "population" variance of the distribution of sample means ($\sigma_{\b
 
 ### Ratio comparison of two approaches
 
-To begin, we are looking at a distribution of sampling means **where the means differ only due to random sampling error**. In this situation, we have calculated the variance of the distribution of sample means using two different approaches.
+To begin, we are looking at a distribution of sampling means **where the means differed only due to random sampling error**. In this situation, we have calculated the variance of the distribution of sample means using two different approaches.
 
 -   Approach 1: Total variance of sample means calculated using sample means and the variance formula
 
@@ -188,7 +188,9 @@ $$
 
 You can see the ratio comparing these two approaches below is 1.00 - so we conclude two approaches produced the same result. If the number on the top of the ratio was the *larger* of the two, then the value of the ratio would be greater than 1.00. In contrast, if the number on the top of the ratio was the *smaller* of the two, then the value of the ratio would be less than 1.00. Be sure you understand how to interpet the value of a ratio using these rules before continuing.
 
-In this section, we focused on actually **calculating** the variance of the distribution of sample means using two approaches. But to actually **calculate** this variance we needed an infinite number of sample means (Approach 1) or knowledge of the population variance (Approach 2). Consequently, it's impractical to **calcualte** either quantity.
+**CRITICAL: Think about what this means.** Both approaches produced the same number. The **total variance approach** resulted in the same number as the **random samplingly only approach**. *So we can conclude the only reason the sample means differed from each other was random sampling*. Go back and re-read this paragraph a few times until you are sure you understand this crucial point.
+
+**CALCULATION VS ESTIMATION**. In this section, we focused on actually **calculating** the variance of the distribution of sample means using two approaches. But to actually **calculate** this variance we needed an infinite number of sample means (Approach 1) or knowledge of the population of people variance (Approach 2). Consequently, it's impractical to **calculate** either quantity.
 
 In the next section, below, we recognize that we can likely never know or calculate the variance of the distribution of sample means. Instead, we focus on **estimating** the variance of the distribution of sample means. An **estimated value** is an approximation of the actual value that will differ due to the effects of random sampling.
 
