--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -473,7 +473,7 @@ ggplot(data = data_ratios, mapping = aes(x = var_ratio)) +
   geom_histogram(breaks = seq(0, 10, by = .5)) +
   scale_x_continuous(breaks = seq(0,10, by = .5)) +
   coord_cartesian(xlim = c(0,10), ylim = c(0, 40000)) +
-  xlab("Variance Ratio: (method_1_var / method_2_clt)") +
+  xlab("Variance Ratio: (approach_1_total_var / approach_2_clt)") +
   ylab("Frequency") +
   theme_classic()
 ```
@@ -556,7 +556,7 @@ ggplot(data = data_ratios3, mapping = aes(x = var_ratio)) +
   geom_vline(xintercept = 3.88, color = "blue", size = 1) +
   scale_x_continuous(breaks = seq(0,10, by = .5)) +
   coord_cartesian(xlim = c(0,10), ylim = c(0, 40000)) +
-  xlab("Variance Ratio: (method_1_var / method_2_clt)") +
+  xlab("Variance Ratio: (approach_1_total_var / approach_2_clt)") +
   ylab("Frequency") +
   theme_classic()
 ```
